--- a/index.html
+++ b/index.html
@@ -345,8 +345,21 @@
             </li>
           </ul>
         </div>
+        <div class="subscribe">
+          <p class="subscribe-title">Подпишитесь на рассылку</p>
+          <form class="subscribe-form">
+            <input type="email" name="user-email" placeholder="E-mail" />
+            <button type="submit" class="subscribe-btn">
+              Подписаться
+              <svg class="subscribe-icon" width="24" height="24">
+                <use href="./images/icons.svg#icon-send"></use>
+              </svg>
+            </button>
+          </form>
+        </div>
       </div>
     </footer>
+    <!--backdrop/modal-->
     <div class="backdrop is-hidden" data-modal>
       <div class="modal">
         <button type="button" class="modal-close" data-modal-close>
@@ -354,6 +367,90 @@
             <use href="./images/icons.svg#icon-close"></use>
           </svg>
         </button>
+        <p class="modal-title">Оставьте свои данные, мы вам перезвоним</p>
+        <form action="#" class="modal-form">
+          <div class="modal-field">
+            <label class="form-input-text" for="user-name">
+              Имя
+            </label>
+            <div class="input-wrap">
+              <input 
+                type="text"
+                id="user-name"
+                name="user-name"
+                class="modal-text-input"
+                required >
+              <svg class="input-icon" width="18" height="18">
+                <use href="./images/icons.svg#icon-person"></use>
+              </svg>
+            </div>
+          </div>
+          <div class="modal-field">
+            <label class="form-input-text" for="user-phone">
+              Телефон
+            </label>
+            <div class="input-wrap">
+              <input 
+                type="tel"
+                id="user-phone"
+                name="user-phone"
+                class="modal-text-input"
+                required >
+              <svg class="input-icon" width="18" height="18">
+                <use href="./images/icons.svg#icon-phone"></use>
+              </svg>
+            </div>
+          </div>
+          <div class="modal-field">
+            <label class="form-input-text" for="user-mail">
+              Почта
+            </label>
+            <div class="input-wrap">
+              <input 
+                type="mail"
+                id="user-mail"
+                name="user-mail"
+                class="modal-text-input"
+                required >
+              <svg class="input-icon" width="18" height="18">
+                <use href="./images/icons.svg#icon-email"></use>
+              </svg>
+            </div>
+          </div>
+          <div class="modal-textarea">
+            <label class="form-input-text" for="user-text">
+              Комментарий
+            </label>
+            <textarea 
+            name="user-text" 
+            id="user-text" 
+            class="modal-form-text"
+            placeholder="Введите текст"
+            ></textarea>
+          </div>
+          <div class="modal-policy-check">
+            <input 
+            type="checkbox"
+            id="policy"
+            name="policy"
+            class="modal-check visually-hidden"
+            >
+            <label for="policy" class="modal-policy">
+              <span class="check-item">
+                <svg class="check-icon" width="11" height="8">
+                  <use href="./images/icons.svg#icon-accept"></use>
+                </svg>
+              </span>
+              Соглашаюсь с рассылкой и принимаю &nbsp
+              <a href="" class="policy-link" >
+                 Условия договора
+              </a>
+            </label>
+          </div>
+          <button type="submit" class="modal-submit-btn">
+            Отправить
+          </button>
+        </form>
       </div>
     </div>
     <script src="./js/modal.js"></script>
