--- a/index.html
+++ b/index.html
@@ -320,8 +320,8 @@
                 </ul>
             </address>
         </div>
-        <div class="join container">
-          <p class="join-title">Присоединяйтесь</p>
+        <div class="join ">
+          <p class="footer-title">Присоединяйтесь</p>
           <ul class="list join-list">                                             
             <li class="join-item">
               <a class="join-link" href="">
@@ -346,9 +346,9 @@
           </ul>
         </div>
         <div class="subscribe">
-          <p class="subscribe-title">Подпишитесь на рассылку</p>
+          <p class="footer-title">Подпишитесь на рассылку</p>
           <form class="subscribe-form">
-            <input type="email" name="user-email" placeholder="E-mail" />
+            <input class="email" type="email" name="user-email" placeholder="E-mail" />
             <button type="submit" class="subscribe-btn">
               Подписаться
               <svg class="subscribe-icon" width="24" height="24">
