--- a/portfolio.html
+++ b/portfolio.html
@@ -177,8 +177,8 @@
                   </ul>
               </address>
           </div>
-          <div class="join container">
-            <p class="join-title">Присоединяйтесь</p>
+          <div class="join ">
+            <p class="footer-title">Присоединяйтесь</p>
             <ul class="list join-list">                                             
               <li class="join-item">
                 <a class="join-link" href="">
@@ -201,6 +201,18 @@
                 </a>
               </li>
             </ul>
+          </div>
+          <div class="subscribe">
+            <p class="footer-title">Подпишитесь на рассылку</p>
+            <form class="subscribe-form">
+              <input class="email" type="email" name="user-email" placeholder="E-mail" />
+              <button type="submit" class="subscribe-btn">
+                Подписаться
+                <svg class="subscribe-icon" width="24" height="24">
+                  <use href="./images/icons.svg#icon-send"></use>
+                </svg>
+              </button>
+            </form>
           </div>
         </div>
       </footer>
